# homeassistant-plus

./: .env.example  .gitignore  .spectra.yaml  package-lock.json  pyproject.toml  repository.yaml
.spectra/snapshots/2026-04-01-setup-remote-access/: created_specs.json
custom_components/bluelab/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  helpers.py  manifest.json  sensor.py  strings.json
home-dashboard/: CHANGELOG.md  Dockerfile  build.yaml  config.yaml  package.json  run.sh
home-dashboard/src/app/: page.tsx
home-dashboard/src/components/: Dashboard.tsx  LightCard.tsx
home-dashboard/src/lib/: hooks.ts
openspec/: config.yaml
openspec/changes/archive/2026-04-01-setup-remote-access/: proposal.md  (+2 more)
openspec/changes/bluelab-cloud-integration/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/bluelab-gateway-device/: proposal.md  tasks.md
openspec/changes/bluelab-telemetry-timestamp/: .openspec.yaml  tasks.md
openspec/changes/build-ha-dashboard/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/decode-bluelab-protobuf/: proposal.md  tasks.md
openspec/changes/fix-bluelab-device-filtering/: .openspec.yaml  tasks.md
openspec/specs/bluelab-cloud-sensor/: spec.md
openspec/specs/device-dashboard/: spec.md
openspec/specs/ha-api-client/: spec.md
openspec/specs/remote-access/: spec.md
src/app/: layout.tsx
src/components/: AreaSection.tsx  ClimateCard.tsx  HumidityCard.tsx  TemperatureCard.tsx
src/lib/: ha-client.ts
tests/bluelab/: test_api.py  test_config_flow.py  test_device_filtering.py  test_sensor.py
(+25 files in other folders)
