[project]
name = "homeassistant-plus"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "aiohttp>=3.9",
    "aioresponses>=0.7",
    "homeassistant>=2025.1",
]
